Fix tag lists not wrapping in chat cards

--- a/less/apps.less
+++ b/less/apps.less
@@ -247,7 +247,6 @@
 
     .tag {
       height: min-content;
-      white-space: nowrap;
     }
   }
 
